feat(db): add PostgreSQL support with dynamic database selection
- Implement database abstraction layer with support for both SQLite and PostgreSQL
- Add new dependencies for PostgreSQL (pg and connect-pg-simple)
- Update session storage to work with selected database
- Enhance .env.example with new database configuration options
- Restructure database-related files into dedicated db directory

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,12 @@
-SESSION_SECRET="your_super_secret_and_long_random_string_here_12345!@#$%"
+# A long, random string used to sign the session ID cookie.
+# For production, use a strong, randomly generated string.
+SESSION_SECRET=
+
+# The connection string for your PostgreSQL database.
+# This is used when DB_CLIENT is set to 'postgres'.
+# Leave blank if you are using SQLite for local development.
+DATABASE_URL=
+
+# Defines which database client to use.
+# Possible values: 'sqlite' (for local development) or 'postgres' (for production).
+DB_CLIENT=sqlite
