--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "i18next": "^25.2.1",
+    "i18next-fs-backend": "^2.6.0",
     "pg": "^8.16.2",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7"
