feat(admin): add registrations by day stats endpoint
- Add new endpoint to fetch user registrations statistics for the last 7 days
- Refactor SQLite database initialization for better maintainability
- Add created_at column to users table in both SQLite and PostgreSQL
- Move trust proxy setting earlier in server.js middleware chain
- Update CORS origin to use environment variable

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,10 @@ DATABASE_URL=
 
 # Defines which database client to use.
 # Possible values: 'sqlite' (for local development) or 'postgres' (for production).
-DB_CLIENT=sqlite
+DB_CLIENT=
+
+# CORS for Admin Panel
+ADMIN_CORS_ORIGIN=localhost:5173
+
+
+MIN_GAME_DURATION_SECONDS=15
