fix(session): enhance cookie security settings and update env example
- Update session cookie configuration with secure, httpOnly, sameSite, and domain settings for production environment. Also improve .env.example documentation with detailed comments and organization.

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,57 @@
-# A long, random string used to sign the session ID cookie.
-# For production, use a strong, randomly generated string.
-SESSION_SECRET=
+# ===============================================================
+# Durak Online - Environment Variables Example
+# ---------------------------------------------------------------
+# Copy this file to .env and fill in the values for your environment.
+# DO NOT COMMIT your actual secrets in the .env file.
+# ===============================================================
+
+# --- Server & Environment ---
+
+# The port the server will run on.
+# Default: 3000
+PORT=3000
+
+# The environment the application is running in.
+# This is crucial for security settings (e.g., cookies, CORS).
+# Possible values: 'development' (for local setup), 'production' (for Render.com).
+NODE_ENV=development
+
+
+# --- Database Configuration ---
+
+# The database client to use.
+# Possible values: 'sqlite', 'postgres'.
+# 'sqlite' is recommended for local development.
+DB_CLIENT=sqlite
 
 # The connection string for your PostgreSQL database.
-# This is used when DB_CLIENT is set to 'postgres'.
-# Leave blank if you are using SQLite for local development.
+# Only required if DB_CLIENT is set to 'postgres'.
+# Example: postgres://user:password@host:port/database
 DATABASE_URL=
 
-# Defines which database client to use.
-# Possible values: 'sqlite' (for local development) or 'postgres' (for production).
-DB_CLIENT=
 
-# CORS for Admin Panel
-ADMIN_CORS_ORIGIN=localhost:5173
+# --- Session & Security ---
+
+# A long, random string used to sign the session ID cookie.
+# For production, use a strong, randomly generated string.
+SESSION_SECRET="generate_a_long_random_string_here_for_production"
+
+# The domain for the session cookie.
+# For production, if the admin panel and the game are on different subdomains,
+# set this to your main domain with a leading dot.
+# Example: .crushtalm.pp.ua
+# Leave blank for local development (localhost).
+COOKIE_DOMAIN=
+
+# The URL of your React admin panel for CORS configuration.
+# This allows the admin panel to make API requests to this server.
+# For local development: http://localhost:5173
+# For production: https://admin.yourdomain.com
+ADMIN_CORS_ORIGIN=http://localhost:5173
 
 
+# --- Game Logic ---
+
+# The minimum duration of a game in seconds.
+# Games that finish faster than this are marked as suspicious.
 MIN_GAME_DURATION_SECONDS=15
