--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "glicko2": "^1.2.1",
     "i18next": "^25.2.1",
     "i18next-fs-backend": "^2.6.0",
     "pg": "^8.16.2",
