feat(notifications): implement web push for game invites - Integrated web-push library on the backend to send VAPID-secured notifications. - Created a `notificationService` to handle the logic of sending pushes. - Added a `push_subscriptions` table (Postgres/SQLite) to store user subscriptions. - Implemented API endpoints for subscribing/unsubscribing and fetching the VAPID key. - Developed a Service Worker (`sw.js`) on the frontend to receive and display push notifications. - Added a UI on the settings page for users to manage their push notification subscription. - The game invitation logic now sends a push notification to offline or inactive users. - Refactored client-side state management for `gameId` to ensure invites are sent only from active lobbies.

--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,21 @@ ADMIN_CORS_ORIGIN=http://localhost:5173
 # The minimum duration of a game in seconds.
 # Games that finish faster than this are marked as suspicious.
 MIN_GAME_DURATION_SECONDS=15
+
+
+# --- Web Push Notifications (VAPID Keys) ---
+# ---------------------------------------------------------------
+# These keys are required for sending push notifications.
+# Generate them once for your project by running `npx web-push generate-vapid-keys`.
+# KEEP YOUR PRIVATE KEY SECRET.
+
+# The subject for VAPID, typically a mailto or a website link.
+# This is used by push services to identify the sender.
+# Example: mailto:your-email@example.com
+VAPID_SUBJECT=
+
+# Your VAPID public key. This key will be sent to the browser.
+VAPID_PUBLIC_KEY=
+
+# Your VAPID private key. This key must be kept secret on the server.
+VAPID_PRIVATE_KEY=
