--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-fs-backend": "^2.6.0",
     "pg": "^8.16.2",
     "socket.io": "^4.8.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "web-push": "^3.6.7"
   }
 }
