Revert "Refactor monolithic server.js into a modular structure"

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,75 @@
-# Application Port
+# ===============================================================
+# Durak Online - Environment Variables Example
+# ---------------------------------------------------------------
+# Copy this file to .env and fill in the values for your environment.
+# DO NOT COMMIT your actual secrets in the .env file.
+# ===============================================================
+
+# --- Server & Environment ---
+
+# The port the server will run on.
+# Default: 3000
 PORT=3000
 
-# Session secret key
-SESSION_SECRET=your_super_secret_key
+# The environment the application is running in.
+# This is crucial for security settings (e.g., cookies, CORS).
+# Possible values: 'development' (for local setup), 'production' (for Render.com).
+NODE_ENV=development
 
-# VAPID keys for web push notifications
-# Generate them using `npx vapid --applicationServerKey --json`
-VAPID_SUBJECT=mailto:your-email@example.com
-VAPID_PUBLIC_KEY=
-VAPID_PRIVATE_KEY=
 
-# Database configuration
-# Use 'sqlite' for local development or 'postgres' for production
+# --- Database Configuration ---
+
+# The database client to use.
+# Possible values: 'sqlite', 'postgres'.
+# 'sqlite' is recommended for local development.
 DB_CLIENT=sqlite
-# For postgres, provide the connection string, e.g., postgresql://user:password@host:port/database
+
+# The connection string for your PostgreSQL database.
+# Only required if DB_CLIENT is set to 'postgres'.
+# Example: postgres://user:password@host:port/database
 DATABASE_URL=
 
-# Cookie domain for production environment
-# Example: .yourdomain.com
+
+# --- Session & Security ---
+
+# A long, random string used to sign the session ID cookie.
+# For production, use a strong, randomly generated string.
+SESSION_SECRET="generate_a_long_random_string_here_for_production"
+
+# The domain for the session cookie.
+# For production, if the admin panel and the game are on different subdomains,
+# set this to your main domain with a leading dot.
+# Example: .crushtalm.pp.ua
+# Leave blank for local development (localhost).
 COOKIE_DOMAIN=
 
-# CORS origin for the admin panel
+# The URL of your React admin panel for CORS configuration.
+# This allows the admin panel to make API requests to this server.
+# For local development: http://localhost:5173
+# For production: https://admin.yourdomain.com
 ADMIN_CORS_ORIGIN=http://localhost:5173
 
-# Node environment
-# Set to 'production' in production
-NODE_ENV=development
+
+# --- Game Logic ---
+
+# The minimum duration of a game in seconds.
+# Games that finish faster than this are marked as suspicious.
+MIN_GAME_DURATION_SECONDS=15
+
+
+# --- Web Push Notifications (VAPID Keys) ---
+# ---------------------------------------------------------------
+# These keys are required for sending push notifications.
+# Generate them once for your project by running `npx web-push generate-vapid-keys`.
+# KEEP YOUR PRIVATE KEY SECRET.
+
+# The subject for VAPID, typically a mailto or a website link.
+# This is used by push services to identify the sender.
+# Example: mailto:your-email@example.com
+VAPID_SUBJECT=
+
+# Your VAPID public key. This key will be sent to the browser.
+VAPID_PUBLIC_KEY=
+
+# Your VAPID private key. This key must be kept secret on the server.
+VAPID_PRIVATE_KEY=
