--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "durak",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
