--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@twa-dev/sdk": "^8.0.2",
     "pinia": "^3.0.4",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.25",
