--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "durak",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +14,7 @@
     "bcrypt": "^6.0.0",
     "connect-pg-simple": "^10.0.0",
     "connect-sqlite3": "^0.9.15",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -21,6 +22,7 @@
     "glicko2": "^1.2.1",
     "i18next": "^25.2.1",
     "i18next-fs-backend": "^2.6.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.2",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
