--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "durak",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,6 +26,7 @@
     "pg": "^8.16.2",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
+    "telegraf": "^4.16.3",
     "web-push": "^3.6.7"
   }
 }
