--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "durak",
-  "version": "2.1.3",
+  "version": "2.2.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "connect-pg-simple": "^10.0.0",
     "connect-sqlite3": "^0.9.15",
     "cookie-parser": "^1.4.7",
