--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "2.2.3",
+  "version": "3.0.0-alpha.1",
   "private": true,
   "type": "module",
   "engines": {
