--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "durak",
-  "version": "2.2.3",
+  "version": "3.0.0-alpha.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
