--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "3.0.0-alpha.4",
+  "version": "3.0.0-alpha.6",
   "private": true,
   "type": "module",
   "engines": {
@@ -14,9 +14,11 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@twa-dev/sdk": "^8.0.2",
     "pinia": "^3.0.4",
     "socket.io-client": "^4.8.1",
+    "uuid": "^13.0.0",
     "vue": "^3.5.25",
     "vue-i18n": "^11.2.2",
     "vue-router": "^4.6.3"
