--- a/.github/workflows/capacitor.yml
+++ b/.github/workflows/capacitor.yml
@@ -16,12 +16,13 @@ jobs:
         with:
           java-version: '21'
           distribution: 'zulu'
-          cache: 'gradle'
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: client/package-lock.json
 
       - name: Install dependencies (root)
         run: npm install
@@ -34,18 +35,16 @@ jobs:
         run: npm run build
         working-directory: ./client
 
-      - name: Add Capacitor to project
-        run: npx cap add android
-
-      - name: Copy web assets to Capacitor
-        run: npx cap copy android
+      - name: Add and Sync Capacitor Android
+        run: |
+          npx cap add android || true
+          npx cap sync android
 
       - name: Build Android project
         run: npx cap build android
 
-      # Optional: Upload artifact
       - name: Upload Android APK
         uses: actions/upload-artifact@v4
         with:
           name: android-apk
-          path: android/app/build/outputs/apk/debug/app-debug.apk # Adjust path if needed
+          path: android/app/build/outputs/apk/debug/app-debug.apk
