--- a/.github/workflows/capacitor.yml
+++ b/.github/workflows/capacitor.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch
 
 jobs:
-  build_android:
+  build_debug:
+    name: Build Debug APK
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -24,27 +24,72 @@ jobs:
           cache: 'npm'
           cache-dependency-path: client/package-lock.json
 
-      - name: Install dependencies (root)
-        run: npm install
+      - name: Install dependencies
+        run: |
+          npm install
+          cd client && npm install
 
-      - name: Install dependencies (client)
-        run: npm install
-        working-directory: ./client
+      - name: Build Web App
+        run: cd client && npm run build
 
-      - name: Build client application
-        run: npm run build
-        working-directory: ./client
-
-      - name: Add and Sync Capacitor Android
+      - name: Capacitor Sync
         run: |
           npx cap add android || true
           npx cap sync android
 
-      - name: Build Android project
-        run: npx cap build android
+      - name: Build Debug APK
+        run: |
+          cd android
+          chmod +x gradlew
+          ./gradlew assembleDebug
 
-      - name: Upload Android APK
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: android-apk
+          name: android-debug-apk
           path: android/app/build/outputs/apk/debug/app-debug.apk
+
+  build_release:
+    name: Build Release APK
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'zulu'
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: client/package-lock.json
+
+      - name: Install dependencies
+        run: |
+          npm install
+          cd client && npm install
+
+      - name: Build Web App
+        run: cd client && npm run build
+
+      - name: Capacitor Sync
+        run: |
+          npx cap add android || true
+          npx cap sync android
+
+      - name: Build Release APK (Unsigned)
+        run: |
+          cd android
+          chmod +x gradlew
+          ./gradlew assembleRelease
+
+      - name: Upload Release APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-release-apk
+          path: android/app/build/outputs/apk/release/app-release-unsigned.apk
