--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "4.0.0-pre-RC.6",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:prepare": "node scripts/preparePrisma.js",
+    "test": "npm run db:prepare && vitest run --exclude test/stress.test.js",
     "build": "cd client && npm install && npm run build"
   },
   "keywords": [],
-  "author": "",
+  "author": "MinecAnton209",
   "license": "MIT",
   "description": "",
   "dependencies": {
     "@capacitor/android": "^8.0.0",
     "@capacitor/ios": "^8.0.0",
+    "@prisma/adapter-pg": "^7.4.2",
+    "@prisma/client": "^6.4.1",
+    "@prisma/config": "^7.4.2",
+    "@prisma/pg-worker": "^6.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "connect-pg-simple": "^10.0.0",
@@ -29,19 +34,29 @@
     "i18next-fs-backend": "^2.6.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.2",
+    "pg-mem": "^3.0.14",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.0.2",
     "telegraf": "^4.16.3",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@capacitor/cli": "^8.0.1",
-    "@capacitor/core": "^8.0.1"
+    "@capacitor/core": "^8.0.1",
+    "prisma": "^6.4.1",
+    "vitest": "^4.0.18"
   },
   "pnpm": {
     "overrides": {
       "tar": "^7.5.3"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "@prisma/client",
+      "bcrypt",
+      "esbuild",
+      "sqlite3"
+    ]
   },
-  "packageManager": "pnpm@10.28.1+sha512.7d7dbbca9e99447b7c3bf7a73286afaaf6be99251eb9498baefa7d406892f67b879adb3a1d7e687fc4ccc1a388c7175fbaae567a26ab44d1067b54fcb0d6a316"
+  "packageManager": "pnpm@10.30.3+sha512.c961d1e0a2d8e354ecaa5166b822516668b7f44cb5bd95122d590dd81922f606f5473b6d23ec4a5be05e7fcd18e8488d47d978bbe981872f1145d06e9a740017"
 }
