feat: implement match history, detailed analysis, and documentation updates for v4.0.0-RC.7

--- a/.env.example
+++ b/.env.example
@@ -67,11 +67,17 @@ ADMIN_CORS_ORIGIN=http://localhost:5173
 MIN_GAME_DURATION_SECONDS=15
 
 
+# --- Telegram Bot ---
+
+# The token for your Telegram Bot.
+# Obtain one from @BotFather on Telegram.
+# Optional for core game, but required for Telegram bot features.
+TELEGRAM_BOT_TOKEN=
+
 # --- Web Push Notifications (VAPID Keys) ---
 # ---------------------------------------------------------------
 # These keys are required for sending push notifications.
-# Generate them once for your project by running `npx web-push generate-vapid-keys`.
-# KEEP YOUR PRIVATE KEY SECRET.
+# Generate them once for your project by running `node generate-vapid.js`.
 
 # The subject for VAPID, typically a mailto or a website link.
 # This is used by push services to identify the sender.
