docs: add default sqlite path to .env.example

--- a/.env.example
+++ b/.env.example
@@ -24,10 +24,10 @@ NODE_ENV=development
 # 'sqlite' is recommended for local development.
 DB_CLIENT=sqlite
 
-# The connection string for your PostgreSQL database.
-# Only required if DB_CLIENT is set to 'postgres'.
-# Example: postgres://user:password@host:port/database
-DATABASE_URL=
+# The connection string for the database.
+# For SQLite (local development): file:./prisma/data/database.sqlite
+# For PostgreSQL (production): postgres://user:password@host:port/database
+DATABASE_URL="file:./prisma/data/database.sqlite"
 
 
 # --- Session & Security ---
